traefik-system/dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-exposed-dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.k8s-sample-gke.jchengdev.com`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`)) # <TODO> use Kustomize to extract hardcoded DNS
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
